--- a/package.json
+++ b/package.json
@@ -21,11 +21,20 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
+    "chai": "^3.5.0",
     "css-loader": "^0.28.0",
+    "karma": "^1.6.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sinon": "^1.0.5",
+    "karma-webpack": "^2.0.3",
+    "mocha": "^3.2.0",
     "node-sass": "^4.5.2",
     "postcss-load-config": "^1.2.0",
     "postcss-loader": "^1.3.3",
     "sass-loader": "^6.0.3",
+    "sinon": "^2.1.0",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
