updates node packages to latest, updates readme

--- a/package.json
+++ b/package.json
@@ -14,41 +14,40 @@
   },
   "author": "Chris Tumminaro",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/CTumminaro/captains-log#readme",
   "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
-    "chai": "^3.5.0",
-    "css-loader": "^0.28.0",
-    "karma": "^1.6.0",
+    "chai": "^4.1.2",
+    "css-loader": "^0.28.7",
+    "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-sinon": "^1.0.5",
-    "karma-webpack": "^2.0.3",
-    "mocha": "^3.2.0",
-    "node-sass": "^4.5.2",
+    "karma-webpack": "^2.0.6",
+    "mocha": "^4.0.1",
+    "node-sass": "^4.7.2",
     "postcss-load-config": "^1.2.0",
-    "postcss-loader": "^1.3.3",
-    "sass-loader": "^6.0.3",
-    "sinon": "^2.1.0",
-    "style-loader": "^0.16.1",
-    "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2"
+    "postcss-loader": "^2.0.8",
+    "sass-loader": "^6.0.6",
+    "sinon": "^4.1.2",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.17.1",
     "font-awesome": "^4.7.0",
-    "normalize.css": "^6.0.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "react-router": "4.0.0-alpha.4",
-    "redux": "^3.6.0",
-    "redux-logger": "^3.0.1",
+    "normalize.css": "^7.0.0",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "react-hot-loader": "^3.1.3",
+    "react-router": "4.2.0",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   }
 }
