--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "captains-log",
+  "name": "webpack-react-starter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/CTumminaro/captains-log.git"
+    "url": "https://github.com/CTumminaro/webpack2-react-scss-barebones-starter.git"
   },
   "author": "Chris Tumminaro",
   "license": "ISC",
